# agent-harness

./: pyproject.toml
.cursor/rules/: agent-harness-architecture.mdc  agent-harness-production.mdc  agents-directory-conventions.mdc
agents/: AGENT_INSTRUCTIONS.md
agents/revisions/: __init__.py  agent.py  prompts.py  tools.py
harness/: __init__.py  openrouter.py  revisions_editor.py
